@@ -105,31 +105,31 @@ public class ForgePreferences extends PreferencesStore<ForgePreferences.FPref> {
         DECKGEN_ARTIFACTS ("false"),
         DECKGEN_NOSMALL ("false"),
 
-        PHASE_AI_UPKEEP ("true"),
-        PHASE_AI_DRAW ("true"),
-        PHASE_AI_MAIN1 ("true"),
+        PHASE_AI_UPKEEP ("false"),
+        PHASE_AI_DRAW ("false"),
+        PHASE_AI_MAIN1 ("false"),
         PHASE_AI_BEGINCOMBAT ("true"),
-        PHASE_AI_DECLAREATTACKERS ("true"),
+        PHASE_AI_DECLAREATTACKERS ("false"),
         PHASE_AI_DECLAREBLOCKERS ("true"),
-        PHASE_AI_FIRSTSTRIKE ("true"),
-        PHASE_AI_COMBATDAMAGE ("true"),
-        PHASE_AI_ENDCOMBAT ("true"),
-        PHASE_AI_MAIN2 ("true"),
+        PHASE_AI_FIRSTSTRIKE ("false"),
+        PHASE_AI_COMBATDAMAGE ("false"),
+        PHASE_AI_ENDCOMBAT ("false"),
+        PHASE_AI_MAIN2 ("false"),
         PHASE_AI_EOT ("true"),
-        PHASE_AI_CLEANUP ("true"),
+        PHASE_AI_CLEANUP ("false"),
 
-        PHASE_HUMAN_UPKEEP ("true"),
-        PHASE_HUMAN_DRAW ("true"),
+        PHASE_HUMAN_UPKEEP ("false"),
+        PHASE_HUMAN_DRAW ("false"),
         PHASE_HUMAN_MAIN1 ("true"),
-        PHASE_HUMAN_BEGINCOMBAT ("true"),
-        PHASE_HUMAN_DECLAREATTACKERS ("true"),
+        PHASE_HUMAN_BEGINCOMBAT ("false"),
+        PHASE_HUMAN_DECLAREATTACKERS ("false"),
         PHASE_HUMAN_DECLAREBLOCKERS ("true"),
-        PHASE_HUMAN_FIRSTSTRIKE ("true"),
-        PHASE_HUMAN_COMBATDAMAGE ("true"),
-        PHASE_HUMAN_ENDCOMBAT ("true"),
+        PHASE_HUMAN_FIRSTSTRIKE ("false"),
+        PHASE_HUMAN_COMBATDAMAGE ("false"),
+        PHASE_HUMAN_ENDCOMBAT ("false"),
         PHASE_HUMAN_MAIN2 ("true"),
-        PHASE_HUMAN_EOT ("true"),
-        PHASE_HUMAN_CLEANUP ("true"),
+        PHASE_HUMAN_EOT ("false"),
+        PHASE_HUMAN_CLEANUP ("false"),
 
         SHORTCUT_SHOWSTACK ("83"),
         SHORTCUT_SHOWCOMBAT ("67"),
